--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,48 @@
 annotated-types==0.7.0
-anyio==4.10.0
-click==8.2.1
+anyio==4.8.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.2
+cryptography==44.0.2
+cycler==0.12.1
+docopt==0.6.2
 et_xmlfile==2.0.0
-fastapi==0.116.1
-h11==0.16.0
-httptools==0.6.4
+fastapi==0.115.11
+fonttools==4.57.0
+greenlet==3.1.1
+h11==0.14.0
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+msal==1.32.0
+numpy==2.2.5
 openpyxl==3.1.5
-psycopg2-binary==2.9.10
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.1.1
+packaging==25.0
+pillow==11.2.1
+pipreqs==0.4.13
+playwright==1.51.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyee==12.1.1
+PyJWT==2.10.1
+pyodbc==5.2.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-multipart==0.0.20
-PyYAML==6.0.2
+requests==2.32.3
+six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.43
-starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uvicorn==0.35.0
-uvloop==0.21.0
-watchfiles==1.1.0
-websockets==15.0.1
+SQLAlchemy==2.0.39
+starlette==0.46.1
+types-openpyxl==3.1.5.20250306
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+yarg==0.1.10
